[package]
name = "todo_tags"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6.1"
futures = "0.3"
prost-types = "0.8.0"
fork = "0.1.18"
daemonize = "0.4.1"
color-eyre = "0.5.11"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
dirs = "4.0.0"
tonic = {version="0.2.0",features = ["tls"]}
tokio = {version="0.2.18",features = ["stream", "macros"]}
http = "0.2.5"
clap = "2.33.3"

[build-dependencies]
tonic-build = "0.2.0"
